# stm32_automation_board

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: CUSTOM_REGISTER_MAP.md  INDUSTRIAL_READINESS_REVIEW.md  MODBUS_CONFORMANCE_REVIEW.md  PROJECT_RECOMMENDATIONS.md  TEST_PLAN.md  USER_MANUAL.md  VALIDATION_CHECKLIST.md
examples/generic_hal_transport/: README.md  board_config.h  modbus_generic_uart_transport.c  modbus_generic_uart_transport.h
inc/: FreeRTOSConfig.h  board_config.h  ethernet.h  ethernetif.h  lwipopts.h  main.h  modbus.h  modbus_diag.h  modbus_event.h  modbus_master.h  modbus_master_rtu.h  modbus_tcp.h  modbus_tcp_server.h  net_init.h  rs232.h  rs485.h  rtu_framer.h  stm32f4xx_hal_conf.h
inc/arch/: cc.h  sys_arch.h
scripts/: check_pin_conflicts.py  fetch_hal.sh  fetch_lwip.sh
src/: analog_io.c  digital_io.c  ethernet.c  ethernetif.c  main.c  modbus.c  modbus_diag.c  modbus_event.c  modbus_master.c  modbus_master_rtu.c  modbus_tcp.c  modbus_tcp_server.c  net_init.c  rs232.c  rs485.c  rtu_framer.c
src/arch/: sys_arch.c
startup/: startup_stm32f407xx.s
tests/: modbus_crc_standalone.c  modbus_host_stubs.c  modbus_test_config.h  stm32f4xx_hal.h  test_freertos.c  test_linker.c  test_modbus.c
